fix z-index issue

--- a/lorybot/assets/css/style.css
+++ b/lorybot/assets/css/style.css
@@ -39,6 +39,7 @@ body.show-chatbot .chatbot-toggler span:first-child  {
 body.show-chatbot .chatbot-toggler span:last-child {
   opacity: 1;
 }
+
 .chatbot {
   position: fixed;
   right: 35px;
@@ -51,10 +52,11 @@ body.show-chatbot .chatbot-toggler span:last-child {
   pointer-events: none;
   transform: scale(0.5);
   transform-origin: bottom right;
-  box-shadow: 0 0 128px 0 rgba(0,0,0,0.1),
-              0 32px 64px -48px rgba(0,0,0,0.5);
+  box-shadow: 0 0 128px 0 rgba(0,0,0,0.1), 0 32px 64px -48px rgba(0,0,0,0.5);
   transition: all 0.1s ease;
+  z-index: 10000; /* Ensures it is above all other elements */
 }
+
 body.show-chatbot .chatbot {
   opacity: 1;
   pointer-events: auto;
@@ -181,6 +183,7 @@ header h2 {
     height: 100%;
     border-radius: 0;
     width: 100%;
+    z-index: 10000; /* Ensure it remains on top */
   }
   .chatbot .chatbox {
     height: 90%;
